--- a/style.css
+++ b/style.css
@@ -8,6 +8,7 @@ h1 {
 
 h2 {
   color: rgb(1, 255, 242);
+  text-align: center;
 }
 
 h3 {
@@ -16,13 +17,21 @@ h3 {
 
 h4 {
   color: rgb(249, 253, 0);
+  text-align: center;
 }
-
+h5 {
+  color: white;
+  font-size: 26px;
+}
 p {
   color: rgb(253, 253, 253);
+  text-align: center;
 }
 li {
-  color: rgb(255, 255, 255);
+  padding-left: 20px;
+  padding-right: 20px;
+  display: inline;
+  font-size: 0px;
 }
 a {
   color: rgb(255, 255, 255);
@@ -41,4 +50,21 @@ input {
 }
 form {
   color: white;
+}
+#top {
+  font-size: 4em;
+  width: 6em;
+  display: inline;
+}
+ul {
+  text-align: center;
+  margin-left: 40px;
+}
+.border {
+  border: 5px solid rgb(251, 255, 0);
+}
+iframe {
+  margin-left: auto;
+  margin-right: auto;
+  display: block;
 }
