--- a/style.css
+++ b/style.css
@@ -1,5 +1,13 @@
 body {
-  background-color: rgb(2, 6, 65);
+  background: linear-gradient(
+    rgb(2, 6, 65),
+    rgb(2, 6, 65),
+    rgb(81, 255, 0),
+    rgb(255, 8, 0),
+    rgb(81, 255, 0),
+    rgb(2, 6, 65),
+    rgb(2, 6, 65)
+  );
 }
 
 h1 {
@@ -57,10 +65,11 @@ form {
   font-size: 4em;
   width: 6em;
   display: inline;
+  text-align: left;
 }
 ul {
+  margin-left: 30px;
   text-align: center;
-  margin-left: 40px;
 }
 .border {
   border: 5px solid rgb(177, 177, 173);
@@ -69,5 +78,10 @@ ul {
 iframe {
   margin-left: auto;
   margin-right: auto;
+  display: block;
+}
+.free {
+  margin-right: auto;
+  margin-left: auto;
   display: block;
 }
